fix background for non mobile

--- a/personal_site/static/css/main/home.css
+++ b/personal_site/static/css/main/home.css
@@ -6,10 +6,24 @@ body {
 .body-wrapper {
   padding: 1em;
   margin: 0 auto;
-  width: 900px;
-  height: 80%;
   background-color: #fcfcfc;
-  border-radius: 10px;
+}
+
+@media (max-width:800px) {
+  .body-wrapper {
+    width: 100%;
+    height: 100%;
+  }
+
+}
+
+@media (min-width:801px) {
+  .body-wrapper {
+    width: 900px;
+    height: 80%;
+    border-radius: 10px;
+  }
+
 }
 
 a {
